--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,72 @@
+#aside-izquierdo .profile {
+  height: 60px;
+  border-radius: 50%;
+}
+
+#aside-izquierdo .my-tags-list {
+  height: 270px;
+  overflow: scroll;
+  width: 240px;
+  overflow-x: hidden;
+}
+
+#aside-izquierdo .aside1 a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  padding: 10px;
+  color: black;
+  text-decoration: none;
+}
+
+#aside-izquierdo .merch-text {
+  color: blue;
+}
+
+#aside-izquierdo li {
+  text-decoration: none;
+  color: black;
+}
+
+#aside-izquierdo img:hover {
+  color: blue;
+  pointer-events: visible;
+}
+
+#aside-izquierdo .merch {
+  max-width: 240px !important;
+  border-radius: 15px;
+}
+
+#aside-izquierdo a {
+  color: black;
+}
+
+#aside-izquierdo a:hover {
+  color: black;
+  text-decoration: none;
+  background-color: #d2d6db;
+}
+
+#aside-izquierdo details a:hover {
+  background-color: #d2d6db;
+}
+
+#aside-izquierdo .rainbowdev {
+  height: 25px;
+}
+
+#aside-izquierdo .list-aside {
+  margin-bottom: 2vh;
+}
+
 .card-profiles {
   padding: 2rem;
   border: 1px solid lightgrey;
