--- a/css/_aside-der.scss
+++ b/css/_aside-der.scss
@@ -1,26 +1,26 @@
-  /*aside 2 article*/
-  .aside-2{
-    list-style:none;
+  .aside-derecho{
+    .list-group-news{
+      background-color: #f9fafa;
   }
-  .a-2, .art-autor{
-    padding:5%;
+  
+  .list-group-news a:hover{
+      background-color: white;
   }
-  .info-xtra-autor, .art-autor{
-    background-color:  #fafafa;
-    padding:5%;
+  
+  .footer a{
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 10px;
+      color: black;
+      text-decoration: none;                
   }
-  /*aside 2 article*/
-  .header-c {
-    max-width: 100wv;
-    margin: auto;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    margin-left: auto;
+  
+  .comments{
+      font-size: 90%;
+      color: gray
+      
   }
-
+  }
 
   
