--- a/css/style.css
+++ b/css/style.css
@@ -167,31 +167,33 @@
   text-decoration: none;
 }
 
-/*aside 2 article*/
-.aside-2 {
-  list-style: none;
+.aside-derecho .list-group-news {
+  background-color: #f9fafa;
 }
 
-.a-2, .art-autor {
-  padding: 5%;
+.aside-derecho .list-group-news a:hover {
+  background-color: white;
 }
 
-.info-xtra-autor, .art-autor {
-  background-color: #fafafa;
-  padding: 5%;
-}
-
-/*aside 2 article*/
-.header-c {
-  max-width: 100wv;
-  margin: auto;
+.aside-derecho .footer a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  margin-left: auto;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  padding: 10px;
+  color: black;
+  text-decoration: none;
+}
+
+.aside-derecho .comments {
+  font-size: 90%;
+  color: gray;
 }
 
 #aside-izquierdo .profile {
