--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -33,3 +33,6 @@ $color-saved:#DCDFEF;
 $color-points:#E6E8E8;
 $color-nav-bottom:#EEF0F1;
 //Fin Footer y Nav**********
+
+//Aside Izquierdo detalle de post**********
+$anchors-color: #202428;
