--- a/css/style.css
+++ b/css/style.css
@@ -1011,4 +1011,21 @@ body {
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
+
+.saved-card {
+  height: 40px;
+}
+
+.saved-card div {
+  height: 40px;
+}
+
+.saved-card a {
+  color: #000000;
+}
+
+.saved-card img {
+  height: 40px;
+  border-radius: 50%;
+}
 /*# sourceMappingURL=style.css.map */
