--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,6 @@
+@import 'main';
 @import 'header';
-@import '_aside-izq';
+@import 'aside-izq';
 @import 'variables';
 @import 'mixins';
 @import 'aside-der';
