--- a/css/_header.scss
+++ b/css/_header.scss
@@ -28,12 +28,12 @@
     background-color: #4150f5;
     color: white;
     .save-key{
-        color: $color-black;
+        color: black;
         &:active{
-            color: $color-black;
+            color: black;
         }
         &:visited{
-            color: $color-black;
+            color: black;
         }
     }
 }
