--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -33,6 +33,7 @@ $color-saved:#DCDFEF;
 $color-points:#E6E8E8;
 $color-nav-bottom:#EEF0F1;
 //Fin Footer y Nav**********
-
+$white:#ffffff;
+$box-shadow:rgba(8, 9, 10, 0.1);
 //Aside Izquierdo detalle de post**********
 $anchors-color: #202428;
