--- a/css/_header.scss
+++ b/css/_header.scss
@@ -56,7 +56,7 @@
     position: absolute;
     background-color: white;
     min-width: 160px;
-    
+    right: 10px;
     box-shadow: 10px 10px 0px 0px black;
     z-index: 1;
   }
