--- a/css/_aside-izq.scss
+++ b/css/_aside-izq.scss
@@ -8,8 +8,8 @@
 
     .my-tags-list{
         height: 270px;
-        overflow: scroll;
-        width: 240px;
+        overflow: visible;
+        width: 150px;
         overflow-x: hidden;
 
     }
