--- a/css/style.css
+++ b/css/style.css
@@ -107,8 +107,8 @@
 
 .aside-izquierdo .my-tags-list {
   height: 270px;
-  overflow: scroll;
-  width: 240px;
+  overflow: visible;
+  width: 150px;
   overflow-x: hidden;
 }
 
@@ -205,8 +205,8 @@
 
 .aside-izquierdo .my-tags-list {
   height: 270px;
-  overflow: scroll;
-  width: 240px;
+  overflow: visible;
+  width: 150px;
   overflow-x: hidden;
 }
 
