--- a/css/style.css
+++ b/css/style.css
@@ -979,6 +979,20 @@ body {
   padding-top: 75px;
 }
 
+.image-add-button {
+  border-radius: 5px;
+  background-color: transparent;
+  color: black;
+  -webkit-transition: all  ease 0.1s;
+  transition: all  ease 0.1s;
+  border: 1px lightgray solid;
+}
+
+.image-add-button:hover {
+  border: 1px gray solid;
+  background-color: #eef0f1;
+}
+
 .footer-write-post {
   margin-left: 20%;
 }
@@ -1062,6 +1076,41 @@ body {
   border-radius: 5px;
   -webkit-box-shadow: 0 0 0 1px rgba(8, 9, 10, 0.1);
           box-shadow: 0 0 0 1px rgba(8, 9, 10, 0.1);
+}
+
+.hashTags {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 40px;
+  border-radius: 5px;
+  color: #000000;
+}
+
+.hashTags:hover {
+  background-color: rgba(8, 9, 10, 0.05);
+}
+
+.readingListSearch {
+  border: 1px lightgray  solid;
+  border-radius: 5px;
+  height: 41px;
+}
+
+.view-archive {
+  border-radius: 5px;
+  border: 1px lightgray solid;
+  height: 40px;
+  background-color: transparent;
+  color: #000000;
+}
+
+.view-archive:hover {
+  background-color: transparent;
+  border: 2px gray solid;
 }
 
 .saved-card h1 {
